додає адаптивну верстку

--- a/css/main.css
+++ b/css/main.css
@@ -597,12 +597,14 @@ body {
   height: 120px;
   background: var(--bkg-color-light);
   border-radius: 4px;
+  margin-bottom: 30px;
 }
 
 .benefits__title {
   font-weight: 700;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  text-align: start;
   color: var(--title-color);
   font-size: 14px;
   margin-bottom: 10px;
@@ -613,7 +615,6 @@ body {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--text-color);
-  margin-bottom: 30px;
 }
 
 .benefits {
@@ -628,8 +629,9 @@ body {
     text-align: center;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .benefits__list {
+    display: flex;
     flex-wrap: wrap;
     gap: 30px;
     justify-content: center;
@@ -637,8 +639,21 @@ body {
   .benefits__item {
     flex-basis: calc((100% - 30px) / 2);
   }
+  .benefits__item-card {
+    margin-bottom: 30px;
+  }
   .benefits__title {
     text-align: start;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .benefits__list {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .benefits__item:not(:last-child) {
+    margin-right: 30px;
   }
 }
 .serves__title {
@@ -682,6 +697,11 @@ body {
   padding: 27px 80px;
 }
 
+@media screen and (max-width: 1199px) {
+  .serves {
+    display: none;
+  }
+}
 .team-section {
   background-color: var(--bkg-color-light);
 }
