--- a/sass/layout/_benefits.scss
+++ b/sass/layout/_benefits.scss
@@ -6,13 +6,14 @@
     height: 120px;
     background: var(--bkg-color-light);
     border-radius: 4px;
+    margin-bottom: 30px;
 }
 
 .benefits__title{
     font-weight: 700;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    // text-align: center;
+    text-align: start;
     color: var(--title-color);
     font-size: 14px;
     margin-bottom: 10px;    
@@ -21,8 +22,7 @@
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-    color: var(--text-color);
-    margin-bottom: 30px;
+    color: var(--text-color);   
 }
 .benefits{
     padding-bottom: 0;
@@ -35,26 +35,32 @@
         text-align: center;
     }
 }
-@media screen and (min-width: 768px){
+@media screen and (min-width: 768px) and (max-width: 1199px){
     .benefits__list{
-    flex-wrap: wrap;
-    gap: 30px;
-    justify-content: center;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 30px;
+        justify-content: center;
     }
     .benefits__item{
         flex-basis: calc((100% - 30px) / 2);
     }
+    .benefits__item-card{
+        margin-bottom: 30px;
+    }
     .benefits__title{
         text-align: start;
+        
     }
 }
-// .benefits__list{
-//     display: flex;
-//     align-items: center;
-//     justify-content: space-between;
-    
-// }
-// .benefits__item:not(:last-child){
-//     margin-right: 30px;
-// }
+@media screen and (min-width: 1200px) {
+    .benefits__list{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+        .benefits__item:not(:last-child){
+        margin-right: 30px;
+    }
+}
 
