--- a/sass/layout/_serves.scss
+++ b/sass/layout/_serves.scss
@@ -35,3 +35,8 @@
     background: rgba(47, 48, 58, 0.8);
     padding: 27px 80px;
 }
+@media screen and (max-width: 1199px){
+    .serves{
+        display: none;
+    }
+}
