--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -16,6 +16,7 @@
     gap: 30px;
     justify-content: center;    
 }
+
 .team__employees-card{
     flex-basis: calc((100% - 90px) / 4);
     background: #FFFFFF;
@@ -72,5 +73,10 @@
     .team__social-link:hover &,
     .team__social-link:focus &{
     fill: var(--text-color-white);
+    }
+}
+@media screen and (min-width: 1200px) {
+    .team__list {
+        // flex-wrap: nowrap;
     }
 }
