--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -87,7 +87,7 @@
     screen and (min-resolution: 2dppx) and (min-width: 1200px) {
     .hero {
         background-image: linear-gradient(rgba(47, 48, 58, 0.4), 
-        rgba(47, 48, 58, 0.4)), url('../../images/hero-desktop@2x.jpg');
+        rgba(47, 48, 58, 0.4)), url(../../images/hero-desktop@2x.jpg);
     }
 }
 
