виправляє фонове зображення

--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -75,8 +75,8 @@
     fill: var(--text-color-white);
     }
 }
-@media screen and (min-width: 1200px) {
-    .team__list {
-        // flex-wrap: nowrap;
-    }
-}
+// @media screen and (min-width: 1200px) {
+//     .team__list {
+//         flex-wrap: nowrap;
+//     }
+// }
