--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -3,7 +3,7 @@
     padding: 118px 0;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), 
     rgba(47, 48, 58, 0.4)), 
-    url(../../images/hero-mobile.jpg);
+    url(../images/hero-mobile.jpg);
     background-size: cover; 
 }
 .hero__title{
@@ -45,13 +45,13 @@
     screen and (min-resolution: 2dppx) and (max-width: 767px) {
     .hero{
         background-image: linear-gradient(rgba(47, 48, 58, 0.4), 
-        rgba(47, 48, 58, 0.4)), url(../../images/hero-mobile@2x.jpg);
+        rgba(47, 48, 58, 0.4)), url(../images/hero-mobile@2x.jpg);
     }
 }
 @media screen and (min-width: 768px) {
     .hero {
         background-image: linear-gradient(rgba(47, 48, 58, 0.4), 
-        rgba(47, 48, 58, 0.4)), url(../../images/hero-tabl.jpg);
+        rgba(47, 48, 58, 0.4)), url(../images/hero-tabl.jpg);
     }
 }
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
@@ -59,13 +59,13 @@
     screen and (min-resolution: 2dppx) and (min-width: 768px) {
     .hero {
         background-image: linear-gradient(rgba(47, 48, 58, 0.4), 
-        rgba(47, 48, 58, 0.4)), url(../../images/hero-tabl@2x.jpg);
+        rgba(47, 48, 58, 0.4)), url(../images/hero-tabl@2x.jpg);
     }
 }
 @media screen and (min-width: 1200px) {
     .hero {
         background-image: linear-gradient(rgba(47, 48, 58, 0.4), 
-        rgba(47, 48, 58, 0.4)), url(../../images/hero-desktop.jpg);
+        rgba(47, 48, 58, 0.4)), url(../images/hero-desktop.jpg);
     }
     .hero {
         padding: 200px 0;
@@ -87,7 +87,7 @@
     screen and (min-resolution: 2dppx) and (min-width: 1200px) {
     .hero {
         background-image: linear-gradient(rgba(47, 48, 58, 0.4), 
-        rgba(47, 48, 58, 0.4)), url(../../images/hero-desktop@2x.jpg);
+        rgba(47, 48, 58, 0.4)), url(../images/hero-desktop@2x.jpg);
     }
 }
 
