--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -12,7 +12,7 @@
     flex-direction: column;
 }
 .modal__form-field{
-    width: 448px;
+    // width: 448px;
     height: 58px;
     margin-bottom: 10px;
 }
@@ -81,7 +81,7 @@
     display: flex;
     align-items: center;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 12px;
     line-height: 1.71;
     color: var(--text-color);
     margin-bottom: 30px;
@@ -109,5 +109,9 @@
         }
     }      
 }
-
+@media screen and (min-width: 1200px){
+    .modal__form-check-desc{
+        font-size: 14px;
+    }
+}
 
