--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -3,8 +3,8 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 528px;
-    height: 581px;
+    width: 450px;
+    height: 609px;
     background-color: #FFFFFF;
     padding: 40px;
 }
@@ -35,6 +35,12 @@
     .modal__close-btn:hover &,
     .modal__close-btn:focus &{
         fill: var(--accent-color);
+    }
+}
+@media screen and (min-width: 1200px){
+    .modal{
+        width: 528px;
+        height: 581px;
     }
 }
 
