--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,22 +1,23 @@
+.clients__list{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+}
 .clients__title{
     font-weight: 700;
-    font-size: 36px;
+    font-size: 28px;
     line-height: 1.17;
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--title-color);
     margin-bottom: 50px;
 }
-.clients__list{
-    display: flex;
-    justify-content: center;
-    gap: 30px;
-}
+
 .clients__link{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 170px;
+    width: 210px;
     height: 92px;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
@@ -37,3 +38,14 @@
         fill: var(--accent-color);
     }
 }
+@media screen and (min-width: 1200px){
+    .clients__title{
+        font-size: 36px;
+    }
+    .clients__link{
+        width: 170px;
+    }
+}
+
+
+
